feat: Navbar overhaul, footer overhaul, removed unused scripts in header, main page is a little more tidy,

--- a/public/download.html
+++ b/public/download.html
@@ -10,56 +10,37 @@
 
 <div class="navbar bg-base-100 shadow-sm">
   <div class="navbar-start">
-    <div class="dropdown">
-      <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /> </svg>
-      </div>
-      <ul
-        tabindex="0"
-        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
-        <li><a onclick="location.href='/download.html';">Download</a></li>
-        <li><a onclick="location.href='/credits.html';">Credits</a></li>
-      </ul>
-    </div>
-    <img class="" src="https://myshare.haydar.dev/img/myshare_white.png" style="height: 64px; width: 64px;">
-    <a class="btn btn-ghost text-xl">MyShare</a>
+  <a href="https://myshare.haydar.dev"> <img class="" src="https://myshare.haydar.dev/img/myshare_white.png" style="height: 64px; width: 64px;"> </a>
   </div>
-  <div class="navbar-center hidden lg:flex">
+  <div class="navbar-end">
     <ul class="menu menu-horizontal px-1">
       <li><a onclick="location.href='/download.html';">Download</a></li>
       <li><a onclick="location.href='/credits.html';">Credits</a></li>
+      <li><a onclick="location.href='/credits.html';">Pricing</a></li>
     </ul>
-  </div>
-  
-  <div class="navbar-end">
-    <label class="swap swap-rotate">
-      <input type="checkbox" class="theme-controller" value="light" />
-      <svg
-        class="swap-off h-10 w-10 fill-current"
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 24 24"
-        style="padding: 3px; margin-right: 10px;">
-        <path
-          d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z" />
-      </svg>
-      <svg
-        class="swap-on h-10 w-10 fill-current"
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 24 24"
-        style="padding: 3px; margin-right: 10px;">
-        <path
-          d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z" />
-      </svg>
-    </label>
-  </div>
-    <a class="btn" href="/login.html">Login</a>
+    <div class="dropdown dropdown-end">
+      <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
+        <div class="w-14 rounded-full">
+          <img src="https://myshare.haydar.dev/img/default.png" />
+        </div>
+      </div>
+      <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+        <li> <a href="https://myshare.haydar.dev/login.html" id="dd-login" class="justify-between">Login</a> </li>
+        <li> <a id="dd-profile" class="justify-between">Profile</a> </li>
+        <li><a id="dd-dashboard" href="https://myshare.haydar.dev/dashboard.html" >Dashboard</a></li>
+        <li><a id="dd-logout" onClick="logout()" >Logout</a></li>
+        <div class="divider m-0"></div>
+        <input type="radio" name="theme-dropdown" class="theme-controller btn btn-sm btn-ghost justify-start" aria-label="Dark" value="default" />
+        <input type="radio" name="theme-dropdown" class="theme-controller btn btn-sm btn-ghost justify-start" aria-label="Light" value="light" />
+      </ul>
+    </div>
   </div>
 </div>
 
 
 <div class="hero bg-base-200 min-h-screen">
-<div class="card card-bordered bg-base-300 w-100">
-    <div class="card-body card-bordered">
+<div class="card card-border bg-base-300 w-100 border-base-100 shadow-xl">
+    <div class="card-body card-border">
         <div class="container" style="display: grid;align-items: center; grid-template-columns: 1fr 1fr 1fr;column-gap: 2px;">
          <h2 class="text-2xl font-bold py-2">Downloads</h2>
       </div>
@@ -73,7 +54,7 @@
         Download for Android
       </button>
       <button class="btn btn-neutral" id="downloadiOS">
-        <svg fill="#000000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16px" height="16px" viewBox="0 0 512 512" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="7935ec95c421cee6d86eb22ecd114eed"> <path style="display: inline;" d="M248.644,123.476c-5.45-29.71,8.598-60.285,25.516-80.89 c18.645-22.735,50.642-40.17,77.986-42.086c4.619,31.149-8.093,61.498-24.826,82.965 C309.37,106.527,278.508,124.411,248.644,123.476z M409.034,231.131c8.461-23.606,25.223-44.845,51.227-59.175 c-26.278-32.792-63.173-51.83-97.99-51.83c-46.065,0-65.542,21.947-97.538,21.947c-32.96,0-57.965-21.947-97.866-21.947 c-39.127,0-80.776,23.848-107.19,64.577c-9.712,15.055-16.291,33.758-19.879,54.59c-9.956,58.439,4.916,134.557,49.279,202.144 c21.57,32.796,50.321,69.737,87.881,70.059c33.459,0.327,42.951-21.392,88.246-21.616c45.362-0.258,53.959,21.841,87.372,21.522 c37.571-0.317,67.906-41.199,89.476-73.991c15.359-23.532,21.167-35.418,33.11-62.023 C414.435,352.487,389.459,285.571,409.034,231.131z"> </path> </g> </g></svg>
+        <svg fill="#fff" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16px" height="16px" viewBox="0 0 512 512" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="7935ec95c421cee6d86eb22ecd114eed"> <path style="display: inline;" d="M248.644,123.476c-5.45-29.71,8.598-60.285,25.516-80.89 c18.645-22.735,50.642-40.17,77.986-42.086c4.619,31.149-8.093,61.498-24.826,82.965 C309.37,106.527,278.508,124.411,248.644,123.476z M409.034,231.131c8.461-23.606,25.223-44.845,51.227-59.175 c-26.278-32.792-63.173-51.83-97.99-51.83c-46.065,0-65.542,21.947-97.538,21.947c-32.96,0-57.965-21.947-97.866-21.947 c-39.127,0-80.776,23.848-107.19,64.577c-9.712,15.055-16.291,33.758-19.879,54.59c-9.956,58.439,4.916,134.557,49.279,202.144 c21.57,32.796,50.321,69.737,87.881,70.059c33.459,0.327,42.951-21.392,88.246-21.616c45.362-0.258,53.959,21.841,87.372,21.522 c37.571-0.317,67.906-41.199,89.476-73.991c15.359-23.532,21.167-35.418,33.11-62.023 C414.435,352.487,389.459,285.571,409.034,231.131z"> </path> </g> </g></svg>
          Download for iOS
        </button>
       <div class="divider"></div>
@@ -81,28 +62,14 @@
     </div>
   </div>
 </div>
-<footer class="footer footer-horizontal footer-center bg-base-200 text-base-content rounded p-10">
-  <nav class="grid grid-flow-col gap-4">
-    <a class="link link-hover" href="/about.html">About us</a> |
-    <a class="link link-hover" href="/contact.html">Contact</a> |
-    <a class="link link-hover" href="/tos.html">Terms of Service</a> |
-    <a class="link link-hover" href="/privacy.html">Privacy Policy</a> |
+<footer class="footer footer-horizontal footer-center bg-base-300 text-base-content rounded p-10">
+  <nav class="grid grid-flow-col">
+    <a class="link link-hover" href="/about.html">About us</a> 
+    <a class="link link-hover" href="/contact.html">Contact</a> 
+    <a class="link link-hover" href="/tos.html">Terms of Service</a> 
+    <a class="link link-hover" href="/privacy.html">Privacy Policy</a> 
+    <a class="link link-hover" href="https://github.com/MySharee">GitHub</a> 
   </nav>
-  <nav>
-    <div class="grid grid-flow-col gap-4">
-      <a>
-
-      </a>
-      <a>
-
-      </a>
-      <a>
-
-      </a>
-    </div>
-  </nav>
-  <aside>
-    <p>Copyright © 2024 - 2025 MyShare All right reserved</p>
-  </aside>
+    <p class="p-0">Copyright © 2025 MyShare All right reserved</p>
 </footer>
 </html>
