--- a/public/index.html
+++ b/public/index.html
@@ -24,52 +24,32 @@
 
   <div class="navbar bg-base-100 shadow-sm">
     <div class="navbar-start">
-      <div class="dropdown">
-        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /> </svg>
-        </div>
-        <ul
-          tabindex="0"
-          class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
-          <li><a onclick="location.href='/download.html';">Download</a></li>
-          <li><a onclick="location.href='/credits.html';">Credits</a></li>
-        </ul>
-      </div>
-      <img class="" src="https://myshare.haydar.dev/img/myshare_white.png" style="height: 64px; width: 64px;">
-      <a class="btn btn-ghost text-xl">MyShare</a>
+    <a href="https://myshare.haydar.dev"> <img class="" src="https://myshare.haydar.dev/img/myshare_white.png" style="height: 64px; width: 64px;"> </a>
     </div>
-    <div class="navbar-center hidden lg:flex">
+    <div class="navbar-end">
       <ul class="menu menu-horizontal px-1">
         <li><a onclick="location.href='/download.html';">Download</a></li>
         <li><a onclick="location.href='/credits.html';">Credits</a></li>
+        <li><a onclick="location.href='/credits.html';">Pricing</a></li>
       </ul>
+      <div class="dropdown dropdown-end">
+        <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
+          <div class="w-14 rounded-full">
+            <img src="https://myshare.haydar.dev/img/default.png" />
+          </div>
+        </div>
+        <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+          <li> <a href="https://myshare.haydar.dev/login.html" id="dd-login" class="justify-between">Login</a> </li>
+          <li> <a id="dd-profile" class="justify-between">Profile</a> </li>
+          <li><a id="dd-dashboard" href="https://myshare.haydar.dev/dashboard.html" >Dashboard</a></li>
+          <li><a id="dd-logout" onClick="logout()" >Logout</a></li>
+          <div class="divider m-0"></div>
+          <input type="radio" name="theme-dropdown" class="theme-controller btn btn-sm btn-ghost justify-start" aria-label="Dark" value="default" />
+          <input type="radio" name="theme-dropdown" class="theme-controller btn btn-sm btn-ghost justify-start" aria-label="Light" value="light" />
+        </ul>
+      </div>
     </div>
-    
-    <div class="navbar-end">
-      <label class="swap swap-rotate">
-        <input type="checkbox" class="theme-controller" value="light" />
-        <svg
-          class="swap-off h-10 w-10 fill-current"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-          style="padding: 3px; margin-right: 10px;">
-          <path
-            d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z" />
-        </svg>
-        <svg
-          class="swap-on h-10 w-10 fill-current"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-          style="padding: 3px; margin-right: 10px;">
-          <path
-            d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z" />
-        </svg>
-      </label>
-    </div>
-      <a class="btn" href="/login.html">Login</a>
-    </div>
-  </div>
-
+</div>
 
   <div
     id="bg"
@@ -92,15 +72,18 @@
           Get Started
         </button>
         <br>
-        <div class="stats lg:stats-horizontal shadow-xl bg-base-100 border border-primary" style="margin: 24px;">
+        <div class="mt-10 p-6 bg-gray-800 bg-opacity-80 rounded-lg shadow-lg">
+          <h3 class="text-2xl font-semibold mb-4">Our Achievements</h3>
+          <div class="flex justify-center space-x-8">
           <div class="stat">
-            <div class="stat-title">Total Users</div>
             <div class="stat-value" id="totalUserValue">0</div>
+            <div class="stat-title text-primary-content text-sm">Total Users</div>
           </div>
           <div class="stat">
-            <div class="stat-title"> Total Uploads</div>
             <div class="stat-value" id="totalNotesValue">0</div>
+            <div class="stat-title text-primary-content text-sm"> Total Uploads</div>
           </div>
+        </div>
         </div>
       </div>
     </div>
@@ -123,23 +106,15 @@
       </div>
     </div>
   </div>
-  <footer class="footer footer-horizontal footer-center bg-base-200 text-base-content rounded p-10">
-    <nav class="grid grid-flow-col gap-4">
-      <a class="link link-hover" href="/about.html">About us</a> |
-      <a class="link link-hover" href="/contact.html">Contact</a> |
-      <a class="link link-hover" href="/tos.html">Terms of Service</a> |
-      <a class="link link-hover" href="/privacy.html">Privacy Policy</a> |
+  <footer class="footer footer-horizontal footer-center bg-base-300 text-base-content rounded p-10">
+    <nav class="grid grid-flow-col">
+      <a class="link link-hover" href="/about.html">About us</a> 
+      <a class="link link-hover" href="/contact.html">Contact</a> 
+      <a class="link link-hover" href="/tos.html">Terms of Service</a> 
+      <a class="link link-hover" href="/privacy.html">Privacy Policy</a> 
+      <a class="link link-hover" href="https://github.com/MySharee">GitHub</a> 
     </nav>
-    <nav>
-      <div class="grid grid-flow-col gap-4">
-        <a>
-
-        </a>
-      </div>
-    </nav>
-    <aside>
-      <p>Copyright © 2024 - 2025 MyShare All right reserved</p>
-    </aside>
+      <p class="p-0">Copyright © 2025 MyShare All right reserved</p>
   </footer>
 </html>
 <script src="js/aos.js"></script>
@@ -175,11 +150,25 @@
       });
       if (!response.ok) {
         throw new Error('You are not logged in!');
+        document.getElementById("dd-login").style.display = "block";
+        document.getElementById("dd-profile").style.display = "none";
+        document.getElementById("dd-logout").style.display = "none";
+        document.getElementById("dd-dashboard").style.display = "none";
       }
+      document.getElementById("dd-login").style.display = "none";
       window.location.href = "https://myshare.haydar.dev/dashboard.html"
     } catch (error) {
-
+      document.getElementById("dd-login").style.display = "block";
+      document.getElementById("dd-profile").style.display = "none";
+      document.getElementById("dd-logout").style.display = "none";
+      document.getElementById("dd-dashboard").style.display = "none";
     }
   }
   isLoggedIn();
+
+function logout() {
+  localStorage.removeItem("token");
+  localStorage.removeItem("userId");
+  window.location.href = "https://myshare.haydar.dev";
+}
 </script>
