--- a/public/credits.html
+++ b/public/credits.html
@@ -43,7 +43,7 @@
     <h2 class="text-2xl font-bold py-1">Credits</h2>
     <p2 class="py-2" style="white-space: pre-line"><b>Haydar</b> - VPS & Server Hosting</h2>
     <p2 class="py-2"><b>Byeoon</b> - Lead Developer & Founder</p2>
-    <p2 class="py-2"><b>Cherrii</b> - Graphic Designer</p2>
+    <p2 class="py-2"><b>Cherrie</b> - Graphic Designer</p2>
     <p2 class="py-2"><b>Seele</b> - I Love Her So She Gets A Spot Here</p2>
     <div class="divider"></div>
     <p2>Thank you to everyone who has helped make this service great! </p2>
